--- a/00_intro.html
+++ b/00_intro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Introducción :: JavaScript Elocuente</title>
+  <title>Introducción :: Eloquent JavaScript</title>
   <link rel="stylesheet" href="css/ejs.css"><script>
       var page = {"type":"chapter","number":0,"load_files":["code/intro.js"]}</script></head>
 
