--- a/03_functions.html
+++ b/03_functions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Funciones :: JavaScript Elocuente</title>
+  <title>Funciones :: Eloquent JavaScript</title>
   <link rel="stylesheet" href="css/ejs.css"><script>
       var page = {"type":"chapter","number":3}</script></head>
 
