--- a/04_data.html
+++ b/04_data.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Estructuras de Datos: Objetos y Arrays :: JavaScript Elocuente</title>
+  <title>Estructuras de Datos: Objetos y Arrays :: Eloquent JavaScript</title>
   <link rel="stylesheet" href="css/ejs.css"><script>
       var page = {"type":"chapter","number":4,"load_files":["code/journal.js","code/chapter/04_data.js"]}</script></head>
 
