--- a/html/00_intro.html
+++ b/html/00_intro.html
@@ -42,11 +42,11 @@
 
 <p><a class="p_ident" id="p-60iAe/I8K9" href="#p-60iAe/I8K9" tabindex="-1" role="presentation"></a>Depende de ti hacer el esfuerzo necesario. Cuando te cueste seguir el libro, no saques conclusiones precipitadas sobre tus propias capacidades. Estás bien, simplemente necesitas seguir adelante. Tómate un descanso, vuelve a leer algo de material y asegúrate de leer y comprender los programas de ejemplo y los ejercicios. Aprender es un trabajo duro, pero todo lo que aprendas será tuyo y facilitará aún más el aprendizaje futuro.</p>
 
-<p><a class="p_ident" id="p-H56sno/Fo3" href="#p-H56sno/Fo3" tabindex="-1" role="presentation"></a>{{quote {autor: “Ursula K. Le Guin”, título: “La mano izquierda de la oscuridad”}</p>
+<blockquote>
 
 <p><a class="p_ident" id="p-BOr5TGafm+" href="#p-BOr5TGafm+" tabindex="-1" role="presentation"></a>Cuando la acción se vuelve poco rentable, recopila información; cuando la información se vuelve poco rentable, duerme.</p>
 
-<p><a class="p_ident" id="p-9dmN2ghNKK" href="#p-9dmN2ghNKK" tabindex="-1" role="presentation"></a>quote}}</p>
+</blockquote>
 
 <p><a class="p_ident" id="p-60RIJ55+oa" href="#p-60RIJ55+oa" tabindex="-1" role="presentation"></a>Un programa es muchas cosas. Es un trozo de texto escrito por un programador, es la fuerza directiva que hace que la computadora haga lo que hace, es información en la memoria de la computadora, y al mismo tiempo controla las acciones realizadas en esta memoria. Las analogías que intentan comparar los programas con objetos familiares tienden a quedarse cortas. Una comparación vagamente adecuada es comparar un programa con una máquina: suelen estar implicadas muchas partes separadas y, para hacer que todo funcione, debemos considerar las formas en que estas partes se interconectan y contribuyen a la operación del conjunto.</p>
 
