--- a/html/12_language.html
+++ b/html/12_language.html
@@ -4,15 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Proyecto: Un Lenguaje de Programación :: Eloquent JavaScript</title>
   <link rel=stylesheet href="css/ejs.css"><script>
-      var page = {"type":"chapter","number":12}</script></head>
+      var page = {"type":"chapter","number":12,"load_files":["code/chapter/12_language.js"]}</script></head>
 
 <article>
 <nav><a href="11_async.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="13_browser.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Proyecto: Un Lenguaje de Programación</h1>
-
-<p><a class="p_ident" id="p-7d8XUF7zMV" href="#p-7d8XUF7zMV" tabindex="-1" role="presentation"></a>{{meta {load_files: [“code/chapter/12_language.js”], zip: “node/html”}}</p>
 
 <blockquote>
 
