--- a/html/04_data.html
+++ b/html/04_data.html
@@ -4,15 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Estructuras de datos: Objetos y Arrays :: Eloquent JavaScript</title>
   <link rel=stylesheet href="css/ejs.css"><script>
-      var page = {"type":"chapter","number":4}</script></head>
+      var page = {"type":"chapter","number":4,"load_files":["code/journal.js","code/chapter/04_data.js"]}</script></head>
 
 <article>
 <nav><a href="03_functions.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="05_higher_order.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Estructuras de datos: Objetos y Arrays</h1>
-
-<p><a class="p_ident" id="p-7d8XUF7zMV" href="#p-7d8XUF7zMV" tabindex="-1" role="presentation"></a>{{meta {load_files: [“code/journal.js”, “code/chapter/04_data.js”], zip: “node/html”}}</p>
 
 <blockquote>
 
