--- a/html/06_object.html
+++ b/html/06_object.html
@@ -4,15 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>La Vida Secreta de los Objetos :: Eloquent JavaScript</title>
   <link rel=stylesheet href="css/ejs.css"><script>
-      var page = {"type":"chapter","number":6}</script></head>
+      var page = {"type":"chapter","number":6,"load_files":["code/chapter/06_object.js"]}</script></head>
 
 <article>
 <nav><a href="05_higher_order.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="07_robot.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>La Vida Secreta de los Objetos</h1>
-
-<p><a class="p_ident" id="p-7d8XUF7zMV" href="#p-7d8XUF7zMV" tabindex="-1" role="presentation"></a>{{meta {load_files: [“code/chapter/06_object.js”], zip: “node/html”}}</p>
 
 <blockquote>
 
