--- a/html/11_async.html
+++ b/html/11_async.html
@@ -4,15 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Programación Asíncrona :: Eloquent JavaScript</title>
   <link rel=stylesheet href="css/ejs.css"><script>
-      var page = {"type":"chapter","number":11}</script></head>
+      var page = {"type":"chapter","number":11,"load_files":["code/hangar2.js","code/chapter/11_async.js"]}</script></head>
 
 <article>
 <nav><a href="10_modules.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="12_language.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Programación Asíncrona</h1>
-
-<p><a class="p_ident" id="p-7d8XUF7zMV" href="#p-7d8XUF7zMV" tabindex="-1" role="presentation"></a>{{meta {load_files: [“code/hangar2.js”, “code/chapter/11_async.js”], zip: “node/html”}}</p>
 
 <blockquote>
 
