--- a/html/errata.html
+++ b/html/errata.html
@@ -1,8 +1,9 @@
 <!doctype html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Eloquent JavaScript :: Errata</title>
+  <title>Eloquent JavaScript :: Erratas</title>
   <link rel=stylesheet href="css/ejs.css">
 
   <style>
@@ -11,15 +12,22 @@
 
 <article>
 
-<h1>Errata<div style="font-size: 70%"><a class="subtlelink" href="index.html">Eloquent JavaScript</a>, 4th Edition</div></h2>
+  <h1>Erratas<div style="font-size: 70%"><a class="subtlelink" href="index.html">Eloquent JavaScript</a>, 4ª Edición
+    </div>
+  </h1>
 
-<p>These are the known mistakes in the <strong>fourth edition</strong>
-of the book. For errata in other editions, see these pages: <a href="https://eloquentjavascript.net/1st_edition/errata.html">first</a>, <a href="https://eloquentjavascript.net/2nd_edition/errata.html">second</a>, <a href="https://eloquentjavascript.net/3rd_edition/errata.html">third</a>. To report a problem that is not listed
-here, <a href="mailto:marijn@haverbeke.berlin">send me an email</a>.</p>
+  <p>Estos son los errores conocidos en la <strong>cuarta edición</strong>
+    del libro. Para ver las erratas de otras ediciones, consulta estas páginas: <a
+      href="https://eloquentjavascript.net/1st_edition/errata.html">primera</a>, <a
+      href="https://eloquentjavascript.net/2nd_edition/errata.html">segunda</a>, <a
+      href="https://eloquentjavascript.net/3rd_edition/errata.html">tercera</a>. Para reportar un problema que no esté
+    listado
+    aquí, <a href="mailto:marijn@haverbeke.berlin">envíame un correo electrónico</a>.</p>
 
-<p><em>No issues found yet.</em></p>
+  <p><em>Aún no se han encontrado problemas.</em></p>
 
-<!--
+
+  <!--
 
 <p>Issues whose page number is followed by an ordinal number are only
 present up to the print denoted by that number. I.e. those followed by
