--- a/html/index.html
+++ b/html/index.html
@@ -164,10 +164,12 @@
     <ul class="links">
       <li><a href="code">Editor de Código y soluciones de ejercicios</a></li>
       <li><a href="errata.html">Erratas para el libro impreso</a></li>
-      <li><a href="Eloquent_JavaScript.pdf">Descargar PDF del libro</a> (&amp; <a
-          href="Eloquent_JavaScript_small.pdf">Descargar versión pequeña para móviles</a>)</li>
-      <li><a href="https://eloquentjavascript.net/Eloquent_JavaScript.epub">Este libro como archivo EPUB</a></li>
-      <li><a href="https://eloquentjavascript.net/Eloquent_JavaScript.mobi">Este libro como archivo MOBI (Kindle)</a>
+      <li><a href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book.pdf">Descargar PDF del libro</a> (&amp; <a
+          href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book_mobile.pdf">Descargar versión pequeña para
+          móviles</a>)</li>
+      <li><a href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book.epub">Este libro como archivo EPUB</a></li>
+      <li><a href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book.mobi">Este libro como archivo MOBI
+          (Kindle)</a>
       </li>
       <li><a href="https://eloquentjavascript.net/1st_edition">La primera edición del libro</a></li>
       <li><a href="https://eloquentjavascript.net/2nd_edition">La segunda edición del libro</a></li>
